[package]
name = "near_tx_qx_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
near-jsonrpc-client = "0.10.1"
near-jsonrpc-primitives = "0.23.0"
near-primitives = ">0.22,<0.24"
near-crypto = "0.23.0"
serde_json = "1.0.120"
near-sdk = "5.6.0"